<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.firebaseloginapp.HelpActicity"
    tools:showIn="@layout/help_acticity">


    <!--
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/text_margin"
        android:text="@string/large_text" /> -->


    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:weightSum="4"
        >
        <TextView
            android:textSize="18dp"
            android:textStyle="bold"
            android:layout_weight="4"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/full_ditail" />
        <TableRow
            android:paddingTop="15dp"
            android:paddingBottom="5dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <TextView
                android:textSize="18dp"
                android:textStyle="bold"
                android:layout_weight="4"
                android:id="@+id/full_ditail"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="" />
        </TableRow>


        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="5dp"
            android:background="@color/colorPrimary"
            />


        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"

            >

            <TextView
                android:gravity="center"
                android:layout_gravity="center"
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="لیستی وشە دڵخوازەکان"
                android:layout_weight="3"
                />

            <ImageView

                android:layout_weight="1"
                android:id="@+id/imageView2"
                android:layout_width="46dp"
                android:layout_height="46dp"
                app:srcCompat="@drawable/ic_bookmark" />

        </TableRow>
        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="5dp"
            android:background="@color/colorPrimary"
            />

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <TextView

                android:layout_weight="3"
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_gravity="center"
                android:text="لێرەوە ئەتوانیت ڕەیتینگ بدەیت بە ئەپەکەمان لە گۆگڵ پلەی"/>

            <ImageView
                android:layout_weight="1"
                android:id="@+id/imageView3"
                android:layout_width="32dp"
                android:layout_height="32dp"
                app:srcCompat="@drawable/ic_thumb_up" />
        </TableRow>
        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="5dp"
            android:background="@color/colorPrimary"
            />

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <TextView
                android:gravity="center"
                android:layout_gravity="center|right"
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="بەشی ئەکاونتەکەت، وە لیرە ئەتوانیت وشەی نهێنی بگۆڕیت و یوسەرەکە بسڕیتەوە لەگەڵ چونەدەرەوە لە ئەپەکە"
                android:layout_weight="3"
                />

            <ImageView
                android:id="@+id/imageView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:layout_weight="1"

                app:srcCompat="@drawable/ic_person" />


        </TableRow>
        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="5dp"
            android:background="@color/colorPrimary"
            />

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <TextView
                android:gravity="center"
                android:layout_gravity="center"

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/trans_en_ku"
                android:layout_weight="3"
                />

            <ImageView

                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_weight="1"
                app:srcCompat="@drawable/en_ku" />


        </TableRow>
        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="5dp"
            android:background="@color/colorPrimary"
            />

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <TextView
                android:gravity="center"
                android:layout_gravity="center"

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/trans_ku_en"
                android:layout_weight="3"
                />

            <ImageView

                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_weight="1"
                app:srcCompat="@drawable/ku_en" />


        </TableRow>
        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="5dp"
            android:background="@color/colorPrimary"
            />

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <TextView
                android:gravity="center"
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/trans_en_en"
                android:layout_weight="3"
                />

            <ImageView
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_weight="1"
                app:srcCompat="@drawable/en_en" />

        </TableRow>
        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="5dp"
            android:background="@color/colorPrimary"
            />

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <TextView
                android:gravity="center"
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sound_spech"
                android:layout_weight="3"
                />

            <ImageView
                android:background="@color/bg_help"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_weight="1"
                app:srcCompat="@drawable/ic_mic" />

        </TableRow>

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="5dp"
            android:background="@color/colorPrimary"
            />

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <TextView
                android:gravity="center"
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/speech_word_a"
                android:layout_weight="3"
                />

            <ImageView
                android:background="@color/bg_help"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_weight="1"
                app:srcCompat="@drawable/ic_volume_up_white" />

        </TableRow>
        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="5dp"
            android:background="@color/colorPrimary"
            />

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <TextView
                android:gravity="center"
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/camera_text"
                android:layout_weight="3"
                />

            <ImageView
                android:background="@color/bg_help"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_weight="1"
                app:srcCompat="@drawable/ic_center_focus" />

        </TableRow>
    </TableLayout>


</android.support.v4.widget.NestedScrollView>